--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-"homepage": "https://Barud09.github.io/Barud09/COMP2156",
+"homepage": "https://Barud09.github.io/COMP2156",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Barud09/COMP2156.git"
